tests/snapshots/cli__tests__deleting-emojis.snap
---
source: tests/cli.rs
expression: "CommandSnap\n{\n    args: args.into(), stdin:\n    stdin.map(|s|\n    s.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec()), stdout:\n    stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr: []
---
args:
  - "--threads"
  - "1"
  - "--delete"
  - "\\p{Emoji_Presentation}"
stdin:
  - "Some text \u0010 :) :-) and emojis 🤩!\n"
  - "More: 👽"
stdout:
  - "Some text \u0010 :) :-) and emojis !\n"
  - "More: "
exit_code: 0
