tests/snapshots/cli__tests__german-symbols.snap
---
source: tests/cli.rs
expression: "CommandSnap\n{\n    args: args.into(), stdin:\n    stdin.map(|s|\n    s.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec()), stdout:\n    stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr: []
---
args:
  - "--threads"
  - "1"
  - "--german"
  - "--symbols"
stdin:
  - "Duebel -> 1.5mm; \u0010 Wand != 3m²... UEBELTAETER! 😫"
stdout:
  - "Dübel → 1.5mm; \u0010 Wand ≠ 3m²... ÜBELTÄTER! 😫"
exit_code: 0
