tests/snapshots/cli__tests__go-ignores-vendor-directory.snap
---
source: tests/cli.rs
expression: "CommandSnap\n{\n    args, stdin: None, stdout:\n    stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr: []
---
args:
  - "--go"
  - comments
stdin: ~
stdout:
  - "found.go:3:0-16:// This is found\n"
exit_code: 0
